[gd_scene load_steps=2 format=3 uid="uid://d3ed8ndpd13b"]

[ext_resource type="Script" path="res://Scripts/JoinMenu.gd" id="1"]

[node name="JoinMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.5
offset_top = -26.0
offset_right = 84.5
offset_bottom = 26.0

[node name="Host" type="Button" parent="Menu"]
layout_mode = 2
text = "Host"

[node name="HSeparator" type="HSeparator" parent="Menu"]
layout_mode = 2

[node name="Join" type="Button" parent="Menu"]
layout_mode = 2
text = "Join"

[connection signal="pressed" from="Menu/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Menu/Join" to="." method="_on_Join_pressed"]
